--- a/projeto-coneckta/index.html
+++ b/projeto-coneckta/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coneckta - Login</title>
     <link rel="stylesheet" href="/projeto-coneckta/css/styles.css">
+    <script src="https://kit.fontawesome.com/e2f7503d19.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
@@ -12,14 +13,14 @@
             <div id="main-container">
                 <nav>
                     <ul>
-                        <a href="#"><li>Início</li></a>
-                        <a href="#"><li>Sobre Coneckta</li></a>
-                        <a href="#"><li>Ajuda</li></a>
-                        <a href="#"><li>Termos</li></a>
+                        <a href="#"><li> <i class="fa-solid fa-house" style="color: #ffffff;"></i> Início</li></a>
+                        <a href="#"><li> <i class="fa-solid fa-book" style="color: #ffffff;"></i> Sobre Coneckta</li></a>
+                        <a href="#"><li> <i class="fa-solid fa-circle-info" style="color: #ffffff;"></i> Ajuda</li></a>
+                        <a href="#"><li> <i class="fa-solid fa-print" style="color: #ffffff;"></i> Termos</li></a>
                     </ul>
                 </nav>
                 <div id="intro-container">
-                    <img id="logo-main" src="/img/coneckta.png" alt="">
+                    <img id="logo-main" src="/img/coneckta-logo.png" alt="Logo Coneckta">
                     <p>Bem-vindo à Coneckta, a mais recente inovação no mundo das redes sociais! Em um cenário onde a conexão digital é vital, a Coneckta surge como uma plataforma dedicada a criar laços significativos e promover interações autênticas.</p>
                 </div>
                 <div id="mid-container">
